[project]
name = "optoolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "charlesmdunn", email = "dunncharlesm@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project.scripts]
dbin = "optoolkit.dbglue.input_cli:main"
dbrun = "optoolkit.dbglue.run_cli:main"
dbout = "optoolkit.dbglue.output_cli:main"
